Use new function av_codec_get_tag2() in ffmpeg.c.

Fixes ticket #1953.